--- a/services/agents/tsconfig.json
+++ b/services/agents/tsconfig.json
@@ -1,5 +1,7 @@
-﻿{
+{
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": { "noEmit": true },
+  "compilerOptions": {
+    "outDir": "dist"
+  },
   "include": ["src/**/*"]
 }
