--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Lint
         run: pnpm -w run lint
 
+      - name: Test
+        run: pnpm run test
+
       - name: Build
         run: pnpm -w run build
