--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "python.defaultInterpreterPath": "\\\.venv\\Scripts\\python.exe",
-  "python.analysis.inlayHints.variableTypes": true
+  "python.defaultInterpreterPath": ".venv\\Scripts\\python.exe",
+  "python.analysis.inlayHints.variableTypes": true,
+  "css.lint.unknownAtRules": "ignore",
+  "scss.lint.unknownAtRules": "ignore",
+  "less.lint.unknownAtRules": "ignore"
 }
