feat: migrate dashboard layout and redirect legacy routes to new paths

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@frok/clients": "workspace:*",
+    "@frok/ui": "workspace:*",
     "@tanstack/react-query": "^5.90.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
