--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -31,9 +31,10 @@
     ]
   },
   "include": [
+    ".next/types/**/*.ts",
     "next-env.d.ts",
     "src/**/*",
-    ".next/types/**/*.ts"
+    ".next-dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
