--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
-﻿{
+{
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": { "composite": true, "declaration": true, "outDir": "dist" },
+  "compilerOptions": { "composite": true, "declaration": true, "outDir": "dist", "jsx": "react-jsx" },
   "include": ["src/**/*"]
 }
