feat: enhance web app configuration and dependencies
- Removed ESLint and TypeScript build error ignores from next.config.ts for better code quality enforcement
- Added Next.js image optimization config with specific device and image sizes
- Updated package dependencies including new additions:
  - @hookform/resolvers for form validation
  - react-hook-form for form management
  - react-virtuoso for virtualized lists
  - web-vitals for performance monitoring
- Upgraded existing dependencies including

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,16 @@
       "@frok/clients": ["packages/clients/src/index.ts"],
       "@frok/clients/*": ["packages/clients/src/*"]
       /* add more as you create them */
-    }
+    },
+    /* Enhanced type safety */
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
+    "forceConsistentCasingInFileNames": true
   }
 }
