--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@frok/clients": "workspace:*",
     "@frok/ui": "workspace:*",
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.90.3",
     "lucide-react": "^0.545.0",
@@ -20,11 +21,14 @@
     "openai": "^4.56.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
     "react-markdown": "^10.1.0",
+    "react-virtuoso": "^4.14.1",
     "recharts": "^3.3.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
-    "zod": "^3.23.8",
+    "web-vitals": "^5.1.0",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
