--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,11 @@
     "@frok/clients": "workspace:*",
     "@frok/ui": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.90.3",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
