feat: add Vercel Edge Config and API reference docs
- Added Edge Config support for feature flag management with environment variable setup
- Integrated @scalar/nextjs-api-reference package for API documentation
- Added @vercel/edge-config dependency for Edge Config functionality
- Updated .env.local.example with Edge Config connection string configuration

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -18,3 +18,8 @@ SENTRY_AUTH_TOKEN=your_auth_token
 # Development
 # Set to 'true' to bypass authentication in development (NOT for production!)
 DEV_BYPASS_AUTH=false
+
+# Feature Flags (Vercel Edge Config)
+# Get your Edge Config connection string from: https://vercel.com/docs/storage/edge-config
+# Optional - defaults to local configuration if not provided
+# EDGE_CONFIG=your_edge_config_connection_string
