--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@frok/clients": "workspace:*",
     "@frok/ui": "workspace:*",
     "@hookform/resolvers": "^5.2.2",
+    "@scalar/nextjs-api-reference": "^0.8.23",
     "@sentry/nextjs": "^10.22.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
@@ -61,6 +62,7 @@
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vercel/edge-config": "^1.4.3",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
     "cross-env": "^10.1.0",
