--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,7 @@
     "remark-gfm": "^4.0.1",
     "web-vitals": "^5.1.0",
     "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
