--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@upstash/redis": "^1.35.6",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "openai": "^4.56.0",
     "react": "19.2.0",
