--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,7 +34,9 @@
     "@tanstack/react-query": "^5.90.3",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "@use-gesture/react": "^10.3.1",
     "docx": "^9.5.1",
+    "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
