feat: add auto-refresh and improve light control responsiveness
- Implemented 2.5s polling interval for real-time device state updates
- Added optimistic UI updates for instant visual feedback on light/switch toggles
- Enhanced area toggle logic to properly sync all lights on/off and exclude light groups from individual controls

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,6 +4,7 @@
     "jsx": "preserve",
     "noEmit": true,
     "baseUrl": "src",
+    "types": ["@testing-library/jest-dom"],
     "paths": {
       "@/*": [
         "*"
