chore: clean up temporary test files and update gitignore
- Removed multiple PowerShell test scripts used during development
- Deleted backup file (package.json.bak)
- Added patterns to gitignore for test scripts, backups, and development artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,14 @@ Thumbs.db
 .claude/settings.json
 .claude/settings.local.json
 
+# Temporary development files
+test-*.ps1
+*.bak
+PATH.txt
+PROJECT_INDEX.*
+settings.txt
+nul
+
 # Turbo cache
 .turbo/
 
