--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,6 +20,12 @@
       ],
       "@frok/types/*": [
         "../../../packages/types/src/*"
+      ],
+      "@frok/voice-utils": [
+        "../../../packages/voice-utils/src/index.ts"
+      ],
+      "@frok/voice-utils/*": [
+        "../../../packages/voice-utils/src/*"
       ]
     },
     "allowJs": true,
